--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ h1 {
     width: 80%;
     padding-left: 1%;
     padding-left: 2%;
+
 }
 
 .half-width image {
@@ -58,11 +59,44 @@ h1 {
     border-radius: 8px;
 }
 
+.experince-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    margin-top: 20px;
+}
+
 .dream-big {
     display: flex;
     margin: 50px 0px 0px 20px;
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+
+}
+
+.experience-item {
+    box-shadow: 2px 3px 2px 3px grey;
+    margin: 5%;
+    padding: 10px;
+
+}
+
+#full-stack-developer {
+    border-left: 6px solid blueviolet;
+}
+
+.maroon-colour {
+    color: maroon;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+#baby-web-developer {
+    border-left: solid 6px black;
+}
+
+footer {
+    text-align: center;
 
 }
